💄 Fix #12 Navbar Given Sticky Positioning
Sticky Navbar:
- It is now always accessible no matter how many messages are on the page

- Acts like relative positioning until scrolling is enabled on the pg (fixed positioning screws w/ the messages positioning)

--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,11 @@ body {
 
 nav {
     display: flex;
-    justify-content: space-around;   
+    justify-content: space-around;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    width: 100%;   
 }
 
 nav button {
