--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,7 @@ nav {
     justify-content: space-around;
     position: -webkit-sticky;
     position: sticky;
+    background-color: #fff;
     top: 0;
     width: 100%;   
 }
